fix wrap

--- a/src/components/lessons/total-lesson/styles.module.scss
+++ b/src/components/lessons/total-lesson/styles.module.scss
@@ -11,4 +11,5 @@
     display: flex;
     gap: 24px;
     justify-content: center;
+    flex-wrap: wrap;
 }
